--- a/en-US/300.develop/100.application-development-of-mysql-mode/200.design-a-database-object-of-mysql-mode/300.create-a-table-of-mysql-mode.md
+++ b/en-US/300.develop/100.application-development-of-mysql-mode/200.design-a-database-object-of-mysql-mode/300.create-a-table-of-mysql-mode.md
@@ -125,7 +125,7 @@ The following describes constraints of different types:
 
    If you do not specify the constraint name when you create a `FOREIGN KEY` constraint, the system automatically allocates a constraint name in the `table name_OBFK_creation timestamp` format, for example, `t1_OBFK_1627747200000000`. 
 
-   By default, OceanBase Database checks foreign keys. To disable or enable foreign key check, modify the `foreign_key_checks` tenant variable. For more information about the `foreign_key_checks` variable, see [foreign_key_checks](../../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/2700.foreign_key_checks-of-mysql-mode.md). 
+   By default, OceanBase Database checks foreign keys. To disable or enable foreign key check, modify the `foreign_key_checks` tenant variable. For more information about the `foreign_key_checks` variable, see [foreign_key_checks](../../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/2700.foreign_key_checks-global.md). 
 
 * `CHECK` constraints: The values of a column in the table must conform to specified conditions. 
 
@@ -234,7 +234,7 @@ An auto-increment column has three important attributes: start value, increment,
 | auto_increment_increment | The increment. Value range: [1, 65535]. Default value: `1`. It is a session-level variable.  |
 | auto_increment_offset | The start value of the auto-increment column. Value range: [1,65535]. Default value: `1`. It is a session-level variable. |
 
-You can change the values of the three variables as needed. For more information about how to change the values of system variables, see [Overview of system variables](../../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/100.overview-of-system-variables-of-mysql-mode.md). 
+You can change the values of the three variables as needed. For more information about how to change the values of system variables, see [Overview of system variables](../../../700.reference/500.system-reference/200.system-variable/100.overview-of-system-variables.md). 
 
 Observe the following requirements when you define an auto-increment column:
 
