--- a/en-US/300.develop/200.application-development-of-oracle-mode/200.design-a-database-object-of-oracle-mode/200.create-a-table-of-oracle-mode.md
+++ b/en-US/300.develop/200.application-development-of-oracle-mode/200.design-a-database-object-of-oracle-mode/200.create-a-table-of-oracle-mode.md
@@ -124,7 +124,7 @@ The following describes constraints of different types:
 
    If you do not specify the constraint name when you create a `FOREIGN KEY` constraint, the system automatically allocates a constraint name in the `table name_OBFK_creation timestamp` format, for example, `t1_OBFK_1627747200000000`. 
 
-   By default, OceanBase Database checks foreign keys. To disable or enable foreign key check, modify the `foreign_key_checks` tenant variable. For more information about the `foreign_key_checks` variable, see [foreign_key_checks](../../../700.reference/500.system-reference/300.system-variable-of-oracle-mode/2700.foreign_key_checks-of-oracle-mode.md). 
+   By default, OceanBase Database checks foreign keys. To disable or enable foreign key check, modify the `foreign_key_checks` tenant variable. For more information about the `foreign_key_checks` variable, see [foreign_key_checks](../../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/2700.foreign_key_checks-global.md). 
 
 * `CHECK` constraints: The values of a column in the table must conform to specified conditions. 
 
