--- a/en-US/500.data-migration/1100.bypass-import/200.use-load-data-statement-to-bypass-import-data.md
+++ b/en-US/500.data-migration/1100.bypass-import/200.use-load-data-statement-to-bypass-import-data.md
@@ -47,11 +47,10 @@ For more information about the syntax of the `LOAD DATA` statement, see [LOAD DA
 
    Log on to the tenant as an administrator (`root` for a MySQL tenant and `SYS` for an Oracle tenant), and set the system variable `secure_file_priv` to specify the path to be accessed during file import or export.
 
-   The global system variable `secure_file_priv` specifies the path accessible when you import/export data to/from a file. The default value is `NULL`, indicating that file import and export are disabled. For more information, see [secure_file_priv (MySQL mode)](../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/11500.secure_file_priv-of-mysql-mode.md) and [secure_file_priv (Oracle mode)](../../700.reference/500.system-reference/300.system-variable-of-oracle-mode/11400.secure_file_priv-of-oracle-mode.md).
 
    <main id="notice" type='notice'>
       <h4>Notice</h4>
-      <p>For security reasons, when you set the system variable <code>secure_file_priv</code>, you can use only the local client to execute the SQL statement that modifies the global variable. Specifically, the OBClient is installed on the server where the OBServer node to connect to resides. </p>
+      <p>For security reasons, when you set the system variable <code>secure_file_priv</code>, you can use only the local client to execute the SQL statement that modifies the global variable. For more information, see  <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a>. </p>
    </main>
 
    1. Log on to the server where the OBServer node to connect to resides.
