--- a/en-US/500.data-migration/700.migrate-data-from-csv-file-to-oceanbase-database/200.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md
+++ b/en-US/500.data-migration/700.migrate-data-from-csv-file-to-oceanbase-database/200.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md
@@ -1,4 +1,4 @@
-# Export data by using the LOAD DATA statement
+# Import data by using the LOAD DATA statement
 
 OceanBase Database allows you to use the LOAD DATA statement to import data from external files to database tables.
 
@@ -6,7 +6,7 @@ OceanBase Database allows you to use the LOAD DATA statement to import data from
 
 You can use the LOAD DATA statement to import a CSV text file in the following process:
 
-<main id="notice" type='notice'>
+   <main id="notice" type='notice'>
     <h4>Notice</h4>
     <p>The CSV file must be located on the current OBServer. The current OceanBase Database version does not support loading data from a remote client. </p>
   </main>
@@ -33,7 +33,7 @@ You need to perform the following steps to grant the access to a file on the ser
 
     <main id="notice" type='notice'>
     <h4>Notice</h4>
-    <p>For security reasons, the following SQL statement can only be executed locally but cannot be executed on a remote OBClient. To be specific, you need to log on to the OBClient (or MySQL client) on the OBServer to execute the statement. </p>
+    <p>For security reasons, the following SQL statement can only be executed locally but cannot be executed on a remote OBClient. For more information, see <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a>. </p>
     </main>
 
     ```sql
