--- a/en-US/600.manage/200.tenant-management/600.common-tenant-operations/1200.delete-tenant.md
+++ b/en-US/600.manage/200.tenant-management/600.common-tenant-operations/1200.delete-tenant.md
@@ -4,7 +4,7 @@ OceanBase Database allows you to use the `DROP TENANT` statement to drop a tenan
 
 After a tenant is dropped, the databases and tables of the tenant are also deleted. However, the resource pool used by the tenant is not deleted. It can be used by other tenants.
 
-* If the recycle bin feature is enabled in the sys tenant, `DROP TENANT` drops the specified tenant to the recycle bin. The sys tenant can purge or restore tenants in the recycle bin. For more information, see [Overview](../../400.high-availability/500.recyclebin-management/100.recyclebin-overview.md).
+* If the recycle bin feature is enabled in the sys tenant, `DROP TENANT` drops the specified tenant to the recycle bin. The sys tenant can purge or restore tenants in the recycle bin. For more information, see [Overview of recycle bin](../../400.high-availability/500.recyclebin-management/100.recyclebin-overview.md).
 
 * If the recycle bin feature is disabled in the sys tenant, `DROP TENANT` directly drops the tenant as well as the databases and tables in this tenant.
 
@@ -88,7 +88,7 @@ After a tenant is dropped, the databases and tables of the tenant are also delet
    1 row in set
    ```
 
-   For more information about the parameter related to the recycle bin, see the [recyclebin](../../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/11300.recyclebin-of-mysql-mode.md) topic of the System Variables (MySQL Mode) chapter and the [recyclebin](../../../700.reference/500.system-reference/300.system-variable-of-oracle-mode/11200.recyclebin-of-oracle-mode.md) topic of the System Variables (Oracle Mode) chapter.
+   For more information about parameters related to the recycle bin, see [recyclebin](../../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11300.recyclebin-global.md).
 
 ## More information
 
