--- a/en-US/600.manage/200.tenant-management/600.common-tenant-operations/1300.restore-tenant.md
+++ b/en-US/600.manage/200.tenant-management/600.common-tenant-operations/1300.restore-tenant.md
@@ -34,7 +34,7 @@ At present, only the sys tenant can drop tenants. Therefore, dropped MySQL and O
    1 row in set
    ```
 
-   For more information about the parameter related to the recycle bin, see the [recyclebin](../../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/11300.recyclebin-of-mysql-mode.md) topic of the System Variables (MySQL Mode) chapter and the [recyclebin](../../../700.reference/500.system-reference/300.system-variable-of-oracle-mode/11200.recyclebin-of-oracle-mode.md) topic of the System Variables (Oracle Mode) chapter.
+   For more information about the parameters related to the recycle bin, see [recyclebin](../../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11300.recyclebin-global.md).
 
 4. Execute the `FLASHBACK TENANT` statement to restore a tenant in the recycle bin.
 
