--- a/en-US/600.manage/200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md
+++ b/en-US/600.manage/200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md
@@ -9,7 +9,7 @@ You can use the `SET` statement to modify system variables of a tenant.
 
   <main id="notice" type='notice'>
    <h4>Notice</h4>
-   <p>Setting a global variable requires the SUPER or ALTER SYSTEM privilege. </br>Ensure that you have the required privileges before setting a global variable. </p>
+   <p>Setting a global variable requires the SUPER or ALTER SYSTEM privilege. Ensure that you have the required privileges before setting a global variable.</p>
   </main>
 
 The system variable `ob_query_timeout` in the following example is used to set the timeout period for SQL queries in microseconds. When performing big data queries, you can increase the value of `ob_query_timeout` to avoid query timeout and execution failure.
@@ -42,6 +42,11 @@ The system variable `ob_query_timeout` in the following example is used to set t
    obclient [oceanbase]> SET ob_query_timeout = 20000000;
    Query OK, 0 rows affected
    ```
+
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>In Oracle mode, you can modify the value of session-level variables by using <code>ALTER SESSION SET ob_query_timeout = 20000000;</code>.</p>
+   </main>
 
 4. View the modification result.
 
@@ -119,5 +124,5 @@ SET GLOBAL foreign_key_checks = 0;
 
 For more information about system variables, visit the following links:
 
-* [Overview](../../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/100.overview-of-system-variables-of-mysql-mode.md)
+* [Overview of system variables](../../../700.reference/500.system-reference/200.system-variable/100.overview-of-system-variables.md)
 * [View system variables of a tenant](../600.common-tenant-operations/600.view-system-variables-of-tenant.md)
