--- a/en-US/700.reference/200.administrator-guide/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/400.define-the-constraint-type-for-a-column-of-mysql-mode.md
+++ b/en-US/700.reference/200.administrator-guide/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/400.define-the-constraint-type-for-a-column-of-mysql-mode.md
@@ -72,7 +72,7 @@ OceanBase Database supports the following types of constraints:
 
    By default, OceanBase Database checks foreign keys. To disable or enable foreign key check, modify the `foreign_key_checks` tenant variable.
 
-   For more information about the `foreign_key_checks` variable, see [foreign_key_checks](../../../../500.system-reference/200.system-variable-of-mysql-mode/2700.foreign_key_checks-of-mysql-mode.md).
+   For more information about the `foreign_key_checks` variable, see [foreign_key_checks](../../../../500.system-reference/200.system-variable/300.global-system-variable/2700.foreign_key_checks-global.md).
 
 * `CHECK` constraint: enforces that the values of a column in the table must conform to specified conditions.
 
