--- a/en-US/700.reference/200.administrator-guide/300.database-object-management/200.manage-object-of-oracle-mode/900.manage-dblink-of-oracle-mode/400.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/en-US/700.reference/200.administrator-guide/300.database-object-management/200.manage-object-of-oracle-mode/900.manage-dblink-of-oracle-mode/400.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
@@ -28,11 +28,11 @@ You have created a DBLink. For more information about how to create a DBLink, se
 
 * When you use a DBLink to write data to a remote database, you cannot enable auto commit by setting the `autocommit` variable to `True`. In addition, when an XA transaction is enabled, the system forcibly sets `autocommit` to `False` for the current session and restores `autocommit` to its original value only after the XA transaction is committed or rolled back.
 
-   The system variable `autocommit` specifies whether to enable auto commit of transactions. The default value is `True`. For more information about the system variable `autocommit`, see [autocommit](../../../../500.system-reference/300.system-variable-of-oracle-mode/600.autocommit-of-oracle-mode.md).
+   The system variable `autocommit` specifies whether to enable auto commit of transactions. The default value is `True`. For more information about the system variable `autocommit`, see [autocommit](../../../../500.system-reference/200.system-variable/300.global-system-variable/600.autocommit-global.md).
 
 * If an XA transaction is expected to take a long time, you can use the `set ob_trx_timeout = 1000000000;` statement to increase the transaction timeout period in advance to prevent unexpected errors due to the timeout of the XA transaction.
 
-   The system variable `ob_trx_timeout` specifies the timeout period of transactions. The default value is `86400000000`, in microseconds. For more information about the system variable `ob_trx_timeout`, see [ob_trx_timeout](../../../../500.system-reference/300.system-variable-of-oracle-mode/10200.ob_trx_timeout-of-oracle-mode.md).
+   The system variable `ob_trx_timeout` specifies the timeout period of transactions. The default value is `86400000000`, in microseconds. For more information about the system variable `ob_trx_timeout`, see [ob_trx_timeout](../../../../500.system-reference/200.system-variable/300.global-system-variable/10300.ob_trx_timeout-global.md).
 
 ## Modify data in a remote database
 
