--- a/en-US/700.reference/300.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/400.fast-parameterization.md
+++ b/en-US/700.reference/300.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/400.fast-parameterization.md
@@ -160,7 +160,7 @@ Perform the following step to determine whether an SQL query uses a parameterize
 
 1. Check the `cursor_sharing` variable
 
-   Check the `cursor_sharing` system variable. SQL statements with different `cursor_sharing` values hit different plans. For more information, see [cursor_sharing](../../../500.system-reference/300.system-variable-of-oracle-mode/2000.cursor_sharing-of-oracle-mode.md).
+   Check the `cursor_sharing` system variable. SQL statements with different `cursor_sharing` values hit different plans. For more information, see [cursor_sharing](../../../500.system-reference/200.system-variable/300.global-system-variable/2000.cursor_sharing-global.md).
 
 2. Check the `query_sql` variable
 
