--- a/en-US/600.manage/200.tenant-management/600.common-tenant-operations/600.view-system-variables-of-tenant.md
+++ b/en-US/600.manage/200.tenant-management/600.common-tenant-operations/600.view-system-variables-of-tenant.md
@@ -141,5 +141,5 @@ Setting system variables can help OceanBase Database behave according to busines
 
 For more information about system variables, visit the following links:
 
-* [Overview](../../../700.reference/500.system-reference/200.system-variable-of-mysql-mode/100.overview-of-system-variables-of-mysql-mode.md)
+* [Overview of system variables](../../../700.reference/500.system-reference/200.system-variable/100.overview-of-system-variables.md)
 * [Modify system variables of a tenant](../600.common-tenant-operations/700.modify-system-variables-of-tenant.md)
