--- a/en-US/700.reference/200.administrator-guide/200.basic-database-management/100.manage-clusters/500.manage-observer/300.stop-or-start-observer.md
+++ b/en-US/700.reference/200.administrator-guide/200.basic-database-management/100.manage-clusters/500.manage-observer/300.stop-or-start-observer.md
@@ -38,7 +38,7 @@ When you stop an OBServer node, note that:
 
    The SQL timeout duration can be specified by the `ob_query_timeout` variable in microseconds. The default value is `10000000`. For more information about how to set the variable, see [Set variables](../../200.configuration-management/300.set-variables.md).
 
-   For more information about the `ob_query_timeout` variable, see [ob_query_timeout](../../../../500.system-reference/200.system-variable-of-mysql-mode/9000.ob_query_timeout-of-mysql-mode.md).
+   For more information about the `ob_query_timeout` variable, see [ob_query_timeout](../../../../500.system-reference/200.system-variable/300.global-system-variable/9000.ob_query_timeout-global.md).
 
 * If the command fails to be executed in a short while, the logs may be out of synchronization. In this case, query the `oceanbase.DBA_OB_ROOTSERVICE_EVENT_HISTORY` view to check whether the Stop Server record exists. If no Stop Server record is found, the failure has occurred before the Root Service performs the Stop Server operation. If a Stop Server record is found, the Stop Server operation has failed because the logs are not synchronized.
 
