--- a/en-US/700.reference/200.administrator-guide/200.basic-database-management/400.manage-tenants/1900.manage-tenant-variables.md
+++ b/en-US/700.reference/200.administrator-guide/200.basic-database-management/400.manage-tenants/1900.manage-tenant-variables.md
@@ -122,4 +122,4 @@ The preceding two methods are equivalent in setting a session-level variable.
 
 For more information about the variables of OceanBase Database, see [Overview](../200.configuration-management/100.configuration-management-introduction.md).
 
-For more information about variables, see [System variables (MySQL mode)](../../../500.system-reference/200.system-variable-of-mysql-mode/100.overview-of-system-variables-of-mysql-mode.md) and [System variables (Oracle mode)](../../../500.system-reference/300.system-variable-of-oracle-mode/100.overview-of-system-variables-of-oracle-mode.md).
+For more information about variables, see [System variables](../../../500.system-reference/200.system-variable/100.overview-of-system-variables.md).
