--- a/en-US/700.reference/700.command-line-tools/1100.cdc/200.obcdc/200.obcdc-parameters/200.obcdc-configuration-items.md
+++ b/en-US/700.reference/700.command-line-tools/1100.cdc/200.obcdc/200.obcdc-parameters/200.obcdc-configuration-items.md
@@ -160,7 +160,7 @@ obcdc V4.1 can obtain metadata such as information about schemas and log streams
 
 ### Filter data based on cluster_id
 
-obcdc allows you to filter data based on the cluster_id blocklist. Although OceanBase Database specifies a valid cluster_id range, you can specify the cluster_id values to filter out the following unwanted data in a synchronization task: For more information about how to configure cluster_id values, see [ob_org_cluster_id](../../../../500.system-reference/300.system-variable-of-oracle-mode/8100.ob_org_cluster_id-of-oracle-mode.md). 
+obcdc allows you to filter data based on the cluster_id blocklist. Although OceanBase Database specifies a valid cluster_id range, you can specify the cluster_id values to filter out the following unwanted data in a synchronization task: For more information about how to configure cluster_id values, see [ob_org_cluster_id](../../../../500.system-reference/200.system-variable/400.session-system-variable/8200.ob_org_cluster_id-session.md). 
 
 * The data that is not included in the valid cluster_id range specified by OceanBase Database and OceanBase Migration Service (OMS). The value range is \[1, 4294901759\] U \[4294901760, 4294967295\]. 
 * The data that is specified in the cluster_id_black_list field. 
