--- a/en-US/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
+++ b/en-US/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
@@ -26,13 +26,13 @@ INTO OUTFILE file_route_option
 FROM table_name_list
 [WHERE where_conditions]
 [GROUP BY group_by_list [HAVING having_search_conditions]]
-[ORDER BY order_expression_list]
+[ORDER BY order_expression_list] 
 
 column_list_option:
     column_name[,column_name]...
 
 file_route_option:
-    '/path/file'
+    '/path/file' 
     | 'oss://$PATH/$FILENAME/?host=$HOST&access_id=$ACCESS_ID&access_key=$ACCESSKEY'
 
 format_of_field_option:
@@ -42,7 +42,7 @@ format_of_field_option:
         [ESCAPED BY 'char']
 
 start_and_end_option:
-    LINES
+    LINES 
         [STARTING BY 'string']
         [TERMINATED BY 'string']
 ```
@@ -102,18 +102,13 @@ The following takes exporting data to a local device as an example to describe h
     
     2. Use the OBClient to connect to the `mysql001` tenant in direct connection mode.
     
-        ```bash
-        [admin@xxx /home/admin]# obclient -hxxx.xxx.xxx.xxx -P2881 -uroot@mysql001 -p -A
-        Enter password:
-        Welcome to the OceanBase.  Commands end with ; or \g.
-        Your OceanBase connection id is 3221493926
-        Server version: OceanBase 4.0.0.0 (r100000302022111120-7cef93737c5cd03331b5f29130c6e80ac950d33b) (Built Nov 11 2022 20:38:33)
-    
-        Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
-    
-        Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-    
-        obclient [(none)]>
+        ```shell
+        obclient -hxxx.xxx.xxx.xxx -P2881 -uroot@mysql001 -p****** -A
+        ```
+       Alternatively, run the following command to connect to the tenant `mysql001` by using a local Unix Socket connection.
+
+        ```shell
+        obclient -S /home/admin/oceanbase/run/sql.sock -uroot@mysql001 -p******
         ```
     
     3. Set the export path to `/home/admin`.
