--- a/en-US/700.reference/700.command-line-tools/1200.dooba.md
+++ b/en-US/700.reference/700.command-line-tools/1200.dooba.md
@@ -6,7 +6,7 @@ DOOBA is an O&M script in OceanBase Database for performance monitoring. It is d
 
 After you connect to the sys tenant of OceanBase Database by running a MySQL command, you can run DOOBA to display the queries per second (QPS) and the average response time (RT) of the SQL statements executed in the tenant in real time. The supported SQL types include SELECT, UPDATE, INSERT, DELETE, and COMMIT. You can also view the QPS and RT of SQL statements executed on each OBServer node. 
 
-You can view the [dooba.py](https://github.com/oceanbase/oceanbase/blob/master/tools/scripts/dooba.py) script file of DOOBA in the open source community of OceanBase Database. 
+You can view the [dooba.py](https://github.com/oceanbase/oceanbase/blob/master/script/dooba/dooba) script file of DOOBA in the open source community of OceanBase Database. 
 
 To run DOOBA, you must use a MySQL client. 
 
