--- a/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/200.switchover-failed.md
+++ b/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/200.switchover-failed.md
@@ -4,31 +4,34 @@
 
 ## 问题现象
 
-在备库上执行 Switchover 命令时，报错。
+在主租户或备租户上执行 Switchover 命令失败后，报错。
 
 ## 问题排查
 
-Switchover 失败后，可以先从执行 Switchover 命令后的返回信息初步判断报错原因，也可以通过以下 SQL 确认。其中，value2 列的错误码表示切换失败的原因。
+### 常用排查方法
 
-```sql
-select * FROM DBA_OB_ROOTSERVICE_EVENT_HISTORY 
-where EVENT LIKE "%switchover to%" ORDER BY TIMESTAMP;
-```
+主备租户上执行 Switchover 命令失败后，可以先从执行 Switchover 命令后的返回信息来初步判断报错原因，也可以通过查询 `DBA_OB_ROOTSERVICE_EVENT_HISTORY` 视图确认 Switchover 失败的原因。
 
-另外extra_info列包含trace_id信息，如YB420BA2DAD0-00060145D010E699-0-0，可以根据到备租户1号日志流机器上查询rs或者observer日志。
+1. 租户管理员登录到备租户所在集群的 `sys` 租户。
 
-## Switchover 失败，报错 4179
+2. 执行以下命令，查看失败原因。
 
-Switchover 失败，报错最常见的错误码为 4179，表示备租户与主租户的日志不同步。首先需要确认是否在主备 Switchover 切换之前，已经检查过备库，发现备库落后主库在很小的区间，例如，查询主、备库的 `SYNC_SCN`，发现两者相差不超过 5s。
+   ```sql
+   SELECT * FROM oceanbase.DBA_OB_ROOTSERVICE_EVENT_HISTORY  WHERE EVENT LIKE "%switchover to%" ORDER BY TIMESTAMP;
+   ```
 
-查询
+   查询结果中，`VALUE2` 列的错误码表示切换失败的原因。有关视图 `DBA_OB_ROOTSERVICE_EVENT_HISTORY` 的更多说明，请参见 [](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/4800.oceanbase-dba_ob_rootservice_event_history-of-mysql-mode.md)。
 
-## Switchover 相关的错误码汇总
+### 根据错误码排查
+
+通常遇到的 Switchover 失败的场景为备切主失败，错误码为 4179，表示备租户与主租户的日志不同步。首先需要确认在主备租户进行 Switchover 切换之前，是否已经检查过备租户，确认备租户落后主租户在很小的区间，例如，查询主备租户的 `SYNC_SCN`，确认两者相差不超过 5s。查看主备租户的 `SYNC_SCN` 的详细操作，请参见 [查看日志同步进度](../../400.high-availability/300.physical-standby-database-disaster-recovery/300.log-transport-service/400.view-the-log-synchronization-progress.md)。
+
+Switchover 相关的错误码如下表所示。
 
 | Switchover 错误码 | 含义                                                    |
 |------------------|---------------------------------------------------------|
 | 4179              | 备租户与原主租户的日志不同步                              |
 | 9088              | 原主租户的角色非 `STANDBY` 或者状态为非 `NORMAL`          |
-| 9089              | 原主租户的日志流状态不匹配，可能是备租户切换为主租户异常     |
+| 9089              | 原主租户的日志流状态与实际不匹配，可能是备租户切换为主租户异常     |
 | 4043              | 登录原主租户的用户名和密码错误或者原主租户已经被删除无法登录 |
 | 5260              | 原主租户被锁定，无法查询原主租户                           |
