--- a/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
+++ b/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
@@ -49,7 +49,7 @@ obclient> SELECT TENANT_ID,TENANT_NAME, STATUS, TENANT_ROLE, SWITCHOVER_STATUS, 
 
 1. 租户管理员登录问题租户或问题租户所在集群的 `sys` 租户。
 
-2. 根据租户的 `TENANT_ID` 或 `TENANT_NAME` 查询问题租户的基本状态信息。
+2. 根据租户的 `TENANT_ID` 或 `TENANT_NAME` 查询问题租户的基本状态信息，包括租户角色、同步位点等信息。
 
    * 系统租户查看指定租户的基本状态信息
 
@@ -126,7 +126,7 @@ V4.x 版本的物理备库主要通过日志恢复源来同步日志，您可以
 
    有关 `CDB_OB_LOG_RESTORE_SOURCE` 和 `DBA_OB_LOG_RESTORE_SOURCE` 视图的更多说明，请参见 [CDB_OB_LOG_RESTORE_SOURCE](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/21700.cdb_ob_log_restore_source-of-mysql-mode.md) 和 [DBA_OB_LOG_RESTORE_SOURCE](../../../700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/29100.dba_ob_log_restore_source-of-oracle-mode.md)。
 
-### 步骤三：通过 V$OB_LS_LOG_RESTORE_STATUS 查看恢复状态
+### 步骤三：通过 V$OB_LS_LOG_RESTORE_STATUS 视图查看日志流的恢复状态
 
 1. 租户管理员登录问题租户或问题租户所在集群的 `sys` 租户。
 
