--- a/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
+++ b/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
@@ -14,7 +14,7 @@
 
 通常情况下，通过物理恢复的方式恢复出备租户后，备租户的日志同步就会停留在指定的恢复终点，例如，用户指定恢复到 2023-08-04 10:00:00。
 
-如下所示示例中，租户 `restore_oracle_tenant` 的租户角色为 `STANDBY`，其同步进度卡在了某个固定时间点。造成该现象的原因是用户未执行 RECOVER 命令，其 `SYNC_SCN` 等于可恢复位点 `RECOVERY_UNTIL_SCN`，备租户无需再同步更多日志。
+如下所示示例中，租户 `restore_oracle_tenant` 的租户角色为 `STANDBY`，其同步进度卡在了某个固定时间点。造成该现象的原因是用户未执行 RECOVER 命令，其租户同步位点 `SYNC_SCN` 等于可恢复位点 `RECOVERY_UNTIL_SCN`，故备租户无需再同步更多日志。
 
 ```shell
 obclient> SELECT TENANT_ID,TENANT_NAME, STATUS, TENANT_ROLE, SWITCHOVER_STATUS, SYNC_SCN, REPLAYABLE_SCN, READABLE_SCN,RECOVERY_UNTIL_SCN FROM SYS.DBA_OB_TENANTS\G
