--- a/zh-CN/900.release-notes/10100.enterprise-edition-history-release/9790.V4.2/9710.ob-420_ee.md
+++ b/zh-CN/900.release-notes/10100.enterprise-edition-history-release/9790.V4.2/9710.ob-420_ee.md
@@ -576,7 +576,7 @@ SET GLOBAL parallel_servers_target = 624;
 
 新增如下变更：
 
-| **配置项/系统参数** | **变更版本** | **变更类型** | **变更说明** |
+| **系统变量** | **变更版本** | **变更类型** | **变更说明** |
 | --- | --- | --- | --- |
 | runtime_filter_type | 4.2 | 新增 | SESSION/GLOBAL 级别系统变量，设置租户级别的 Runtime Filter 类型, 包含 BLOOM_FILTER、RANGE、IN 三种类型, 若取值为空字符串，则表示关闭 Runtime Filter 功能。 |
 | runtime_filter_wait_time_ms | 4.2 | 新增 | SESSION/GLOBAL 级别系统变量，设置 runtime filter 的最大等待时间。默认10ms。 |
@@ -590,7 +590,7 @@ SET GLOBAL parallel_servers_target = 624;
 
 #### 配置项变更
 
-| **配置项/系统参数** | **变更版本** | **变更类型** | **变更说明** |
+| **配置项** | **变更版本** | **变更类型** | **变更说明** |
 | --- | --- | --- | --- |
 | enable_rebalance | 4.2 | 修改 | 调整为租户级配置项。系统租户下控制是否进行租户间均衡；普通租户下控制是否进行租户内均衡。 |
 | balancer_idle_time | 4.2 | 修改 | 调整为租户级配置项。系统租户下表示容灾线程和均衡线程的时间间隔；普通租户下租户下表示日志流均衡线程的时间间隔。 |
