--- a/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/200.switchover-failed.md
+++ b/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/200.switchover-failed.md
@@ -26,12 +26,12 @@
 
 通常遇到的 Switchover 失败的场景为备切主失败，错误码为 4179，表示备租户与主租户的日志不同步。首先需要确认在主备租户进行 Switchover 切换之前，是否已经检查过备租户，确认备租户落后主租户在很小的区间，例如，查询主备租户的 `SYNC_SCN`，确认两者相差不超过 5s。查看主备租户的 `SYNC_SCN` 的详细操作，请参见 [查看日志同步进度](../../400.high-availability/300.physical-standby-database-disaster-recovery/300.log-transport-service/400.view-the-log-synchronization-progress.md)。
 
-Switchover 相关的错误码如下表所示。
+Switchover 相关的错误码及其处理方法如下表所示。
 
-| Switchover 错误码 | 含义                                                    |
-|------------------|---------------------------------------------------------|
-| 4179              | 备租户与原主租户的日志不同步                              |
-| 9088              | 原主租户的角色非 `STANDBY` 或者状态为非 `NORMAL`          |
-| 9089              | 原主租户的日志流状态与实际不匹配，可能是备租户切换为主租户异常     |
-| 4043              | 登录原主租户的用户名和密码错误或者原主租户已经被删除无法登录 |
-| 5260              | 原主租户被锁定，无法查询原主租户                           |
+| Switchover 错误码 | 含义                                                    | 处理方法                                                                                  |
+|------------------|---------------------------------------------------------|-------------------------------------------------------------------------------------------|
+| 4179              | 备租户与原主租户的日志不同步                              | 检查备租户的 `SYNC_SCN` 与原主租户的 `SYNC_SCN` 是否相差在 20s 以内，如果是，则重试 Switchover。 |
+| 9088              | 原主租户的角色非 `STANDBY` 或者状态为非 `NORMAL`          | 检查主租户角色和租户状态是否为 `STANDBY `和 `NORMAL`，如果是，重试 Switchover。               |
+| 9089              | 原主租户的日志流状态与实际不匹配，可能是备租户切换为主租户异常     | 检查主租户角色和租户状态是否为 `STANDBY `和 `NORMAL`，如果是，重试 Switchover。          |
+| 4043              | 登录原主租户的用户名和密码错误或者原主租户已经被删除无法登录 | 检查主租户是否存在，如果已经被删除，则只能执行 Failover，Failover 相关操作请参见 [Failover](../../400.high-availability/300.physical-standby-database-disaster-recovery/600.role-switch/300.perform-failover.md)。         |
+| 5260              | 原主租户被锁定，无法查询原主租户                           | 主租户解除锁定后，重试 Switchover，为主租户解除锁定的详细操作请参见 [租户锁定和解锁](../../200.tenant-management/600.common-tenant-operations/1100.tenant-locking-and-unlocking.md)。           |
