--- a/zh-CN/700.reference/300.system-views/300.performance-view-5/100.performance-view-overview-1.md
+++ b/zh-CN/700.reference/300.system-views/300.performance-view-5/100.performance-view-overview-1.md
@@ -32,7 +32,7 @@
 | [V$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-5/5400.v-ob_transaction_participants.md)    | 展示所有 OBServer 上的事务参与者信息。                                  |
 | [V$STATNAME](../300.performance-view-5/5600.v-statname-2.md)                       | 用于展示所有统计事件的相关定义。                                          |
 | [V$EVENT_NAME](../300.performance-view-5/5700.v-event_name-2.md)                     | 当前 OBServer 上所有统计事件的相关定义。                                 |
-| [v$V$SESSION_WAIT](../300.performance-view-5/5900.v-session_wait-3.md)                   | 每个 Session 当前等待事件明细，按照约定，每个等待事件会有三个参数，各自会记录对应的值。          |
+| [v$SESSION_WAIT](../300.performance-view-5/5900.v-session_wait-3.md)                   | 每个 Session 当前等待事件明细，按照约定，每个等待事件会有三个参数，各自会记录对应的值。          |
 | [V$SESSION_WAIT_HISTORY](../300.performance-view-5/6000.v-session_wait_history-3.md)           | 每个 Session 当前等待事件明细，最近 10 次等待事件。                          |
 | [V$SESSTAT](../300.performance-view-5/6100.v-sesstat-3.md)                        | 展示 Session 级别的统计事件概况。                                     |
 | [V$SYSSTAT](../300.performance-view-5/10600.v-sysstat.md)                        | 展示当前服务器上租户级别的统计事件信息。                                              |
