--- a/zh-CN/700.reference/300.performance-tuning-guide/500.sql-optimization/300.distributed-execution-plan/600.optimize-the-parameters-for-parallel-query.md
+++ b/zh-CN/700.reference/300.performance-tuning-guide/500.sql-optimization/300.distributed-execution-plan/600.optimize-the-parameters-for-parallel-query.md
@@ -8,7 +8,7 @@
 
 |        **参数名称**         |         **描述**         |  **取值范围**   |           **默认值**           |         **配置建议**        |
 |-------------------------|-----------------------------|-------------|-----------------------------|-------------------------------------|
-| parallel_servers_target | 当准备排队之前，检查查询要求的并行度和已统计的 Worker 总和是否超过该值。如果超过该值，则查询需要排队，否则查询继续执行。 | \[0, 1800\] | 0（目前会根据 CPU 个数计算得到，以实际大小为准） | 该参数主要是控制 PX 场景下，当准备进行并行查询时，如果没有足够 Worker 处理该查询，决定是否继续进行还是排队等待。 |
+| parallel_servers_target | 当准备排队之前，检查查询要求的并行度和已统计的 Worker 总和是否超过该值。如果超过该值，则查询需要排队，否则查询继续执行。 | \[0, 9223372036854775807\] | 0（目前会根据 CPU 个数计算得到，以实际大小为准） | 该参数主要是控制 PX 场景下，当准备进行并行查询时，如果没有足够 Worker 处理该查询，决定是否继续进行还是排队等待。 |
 
 可以通过 `SHOW VARIABLES` 来查看这些参数的值，如下例所示：
 
@@ -29,7 +29,7 @@ obclient> SHOW VARIABLES LIKE '%paral%';
 
 |    **参数名称**     |      **描述**           |  **取值范围**   |         **默认值**       |          **配置建议**        |
 |-----------------|------------------------------|-------------|------------------------------|--------------------------|
-| dtl_buffer_size | 控制 `EXCHANGE` 算子之间（即Transmit 和 Receive 之间）发送数据时，每次发送数据的 Buffer 的大小。即当数据达到了该值上限才进行发送，减少每行传输的代价。 | \[0, 1800\] | 10（目前会根据 CPU 个数计算得到，以实际大小为准） | PX 场景下，`EXCHANGE` 之间发送数据依赖于该参数大小，一般不需要调整该参数，如果是为了减少发送数据次数等可以尝试进行修改，一般不建议修改该值大小。 |
+| dtl_buffer_size | 控制 `EXCHANGE` 算子之间（即Transmit 和 Receive 之间）发送数据时，每次发送数据的 Buffer 的大小。即当数据达到了该值上限才进行发送，减少每行传输的代价。 | \[4k, 2M\] | 64K（目前会根据 CPU 个数计算得到，以实际大小为准） | PX 场景下，`EXCHANGE` 之间发送数据依赖于该参数大小，一般不需要调整该参数，如果是为了减少发送数据次数等可以尝试进行修改，一般不建议修改该值大小。 |
 
 可以通过 `SHOW PARAMETERS` 来查看参数的值，如下例所示：
 
@@ -38,7 +38,7 @@ obclient> SHOW PARAMETERS LIKE '%dtl%'\G
 *************************** 1. row ***************************
       ZONE: zone1
   SVR_TYPE: observer
-    SVR_IP: 10.X.X.X
+    SVR_IP: 10.xxx.xxx.xxx
   SVR_PORT: 2882
       NAME: dtl_buffer_size
  DATA_TYPE: NULL
