fix  aone issue

--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/100.function-overview-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/100.function-overview-of-oracle-mode.md
@@ -291,7 +291,7 @@ Query OK, 0 rows affected
 | 统计函数     | 聚合函数      | KEEP                      | 用于对一组行中的值进行操作，将这组行按照指定的排序规则排序后返回排在第一或最后的值。                        |
 | 统计函数     | 聚合函数      | LISTAGG                   | 用于列转行，`LISTAGG` 对 `ORDER BY` 子句中指定的每个组内的数据进行排序，然后合并度量列的值。         |
 | 统计函数     | 聚合函数      | MAX                       | 返回参数中指定的列中的最大值。                                                   |
-|          |           | MEDIAN                    | 用于返回一组数值的中值，即将一组数值排序后返回居于中间的数值。                                   |
+| 统计函数         |  聚合函数         | MEDIAN                    | 用于返回一组数值的中值，即将一组数值排序后返回居于中间的数值。                                   |
 | 统计函数     | 聚合函数      | MIN                       | 返回参数中指定列的最小值。                                                     |
 | 统计函数     | 聚合函数      | PERCENT_RANK              | 用来计算一组值中的某个值的累积分布。                                                |
 | 统计函数     | 聚合函数      | PERCENTILE_CONT           | 是一个假定连续分布模型的逆分布函数。根据指定百分比值和排序规范，返回一个在该排序规范的给定百分比值的内插值。            |
