--- a/en-US/300.developer-guide/100.client-connects-to-oceanbase-database/1400.database-connection-pool-configuration-example/0600.dbcp-connection-pool-connection-example.md
+++ b/en-US/300.developer-guide/100.client-connects-to-oceanbase-database/1400.database-connection-pool-configuration-example/0600.dbcp-connection-pool-connection-example.md
@@ -46,7 +46,7 @@ url=jdbc:oceanbase://10.100.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=t
 #Username
 username=admin@mysql
 #Password
-password=admin
+password=******
 #Number of initial connections
 initialSize=30
 #Maximum number of active connections
