--- a/en-US/100.oceanbase-database-overview/100.what-is-oceanbase-database.md
+++ b/en-US/100.oceanbase-database-overview/100.what-is-oceanbase-database.md
@@ -43,6 +43,6 @@ The OceanBase team has been independently developing OceanBase Database for 12 y
 OceanBase Database is developed independently by Ant Group. It is not based on open-source databases such as MySQL or PostgreSQL. OceanBase Database is autonomous, controllable, and free from the technical limits of open-source databases.
 
 
-### Compatibility with products from Chinese manufacturers
+<!-- ### Compatibility with products from Chinese manufacturers
 
-OceanBase Database supports products from Chinese manufacturers in full stack. OceanBase Database can work on physical servers from Chinese manufacturers including Sugon H620 series, TaiShan 200 series, and Great Wall Optimus DF720. OceanBase Database is also adaptive to CPUs including Hygon 7185/7280, Kunpeng 920, and FeiTeng 2000+. In addition, OceanBase Database supports operating systems from Chinese manufacturers, such as Kylin V4, Kylin V10, and UOS V20. OceanBase Database is also adaptive to upper-layer middleware including TongWeb V7.0 and Apusic Application Server V9.0.
+OceanBase Database supports products from Chinese manufacturers in full stack. OceanBase Database can work on physical servers from Chinese manufacturers including Sugon H620 series, TaiShan 200 series, and Great Wall Optimus DF720. OceanBase Database is also adaptive to CPUs including Hygon 7185/7280, Kunpeng 920, and FeiTeng 2000+. In addition, OceanBase Database supports operating systems from Chinese manufacturers, such as Kylin V4, Kylin V10, and UOS V20. OceanBase Database is also adaptive to upper-layer middleware including TongWeb V7.0 and Apusic Application Server V9.0. -->
