--- a/zh-CN/300.develop/100.application-development-of-mysql-mode/200.sample-program-of-mysql-mode/400.go-of-mysql-mode/1.go-sql-driver-mysql-connection-oceanbase-sample-program.md
+++ b/zh-CN/300.develop/100.application-development-of-mysql-mode/200.sample-program-of-mysql-mode/400.go-of-mysql-mode/1.go-sql-driver-mysql-connection-oceanbase-sample-program.md
@@ -11,9 +11,29 @@
   <p>本文档编写代码使用的工具是 IntelliJ IDEA 2021.3.2 (Community Edition) 版本，您也可以根据个人喜好选择适合自己的工具查看示例代码。</p>
 </main>
 
-1. 安装 OceanBase 数据库
+* 安装 OceanBase 数据库
+* 安装 Go 语言
+* 安装 Go-SQL-Driver/MySQL 驱动
 
-2. 安装 Go 语言
+## 操作步骤
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>本文中给出的操作步骤是在 Windows 环境下生成的。如果您使用的是其他操作系统环境或编译器，那么操作步骤可能会略有不同。 </p>
+</main>
+
+1. （可选）安装 Go 语言和驱动。
+2. 获取 OceanBase 数据库连接串。
+3. 获取 `go-oceanbase` 项目代码。
+4. 将 `go-oceanbase` 项目导入到 IDEA 中。
+5. 修改 `go-oceanbase` 项目中的数据库连接信息。
+6. 运行 `go-oceanbase` 项目。
+
+### 步骤一：（可选）安装 Go 语言和驱动
+
+若您本地未按照 Go 语言和 Go-SQL-Driver/MySQL 驱动，可按照以下步骤进行安装。
+
+1. 安装 Go 语言
 
     1. 下载 Go 语言安装包：可以从 [Go 官网](https://golang.org/dl/) 下载适合自己操作系统的安装包。
 
@@ -39,7 +59,7 @@
         go version go1.20.6 windows/amd64
         ```
 
-3. 安装 Go-SQL-Driver/MySQL 驱动
+2. 安装 Go-SQL-Driver/MySQL 驱动
 
     根据 Go 语言的不同版本，可以选择不同的安装方式。关于 `Go-SQL-Driver/MySQL` 的详细信息，您可参考 [Github](https://github.com/go-sql-driver/mysql)。
 
@@ -76,20 +96,7 @@
             <p>部分版本 <code>go install</code> 的默认执行目录可能不是 <code>/src</code>，可以通过 <code>go install</code> 执行后的报错判断实际目录。例如，报错 <code>cannot find package &quot;mysql&quot; in: /usr/local/go/src/vendor/mysql</code>，则应该将 mysql 文件夹放在 <code>/src/vendor</code> 目录下再执行安装命令。</p>
         </main>
 
-## 操作步骤
-
-<main id="notice" type='explain'>
-  <h4>说明</h4>
-  <p>本文中给出的操作步骤是在 Windows 环境下生成的。如果您使用的是其他操作系统环境或编译器，那么操作步骤可能会略有不同。 </p>
-</main>
-
-1. 获取 OceanBase 数据库连接串。
-2. 获取 `go-oceanbase` 项目代码。
-3. 将 `go-oceanbase` 项目导入到 IDEA 中。
-4. 修改 `go-oceanbase` 项目中的数据库连接信息。
-5. 运行 `go-oceanbase` 项目。
-
-### 步骤一：获取 OceanBase 数据库连接串
+### 步骤二：获取 OceanBase 数据库连接串
 
 使用用户账户登录到对应的集群中获取 OceanBase 数据库连接串，例如：
 
@@ -112,7 +119,7 @@ obclient  -h{host} -u{username} -p****** -P{port} -D{schema_name}
 * `port`：提供 OceanBase 数据库连接端口。ODP 连接的方式默认是 `2883`，在部署 ODP 时可自定义；直连方式默认是 `2881`，在部署 OceanBase 数据库时可自定义。
 * `schema_name`：需要访问的 Schema 名称。
 
-### 步骤二：获取 `go-oceanbase` 项目代码
+### 步骤三：获取 `go-oceanbase` 项目代码
 
 点击 [go-oceanbase](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/3.develop/demo/Go/go-oceanbase.zip) 下载项目代码。是一个名称为 `go-oceanbase` 的压缩包。
 
@@ -357,7 +364,7 @@ obclient  -h{host} -u{username} -p****** -P{port} -D{schema_name}
     }
     ```
 
-### 步骤三：将 `go-oceanbase` 项目导入到 IDEA 中
+### 步骤四：将 `go-oceanbase` 项目导入到 IDEA 中
 
 1. 打开 **IntelliJ IDEA**，选择 **File > Open...** 选项。
 
@@ -371,7 +378,7 @@ obclient  -h{host} -u{username} -p****** -P{port} -D{schema_name}
 
    ![go-oceanbase](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/3.develop/demo/Go/go%E6%9F%A5%E7%9C%8B%E9%A1%B9%E7%9B%AE.jpg)
 
-### 步骤四 修改 go-oceanbase 项目中的数据库连接信息
+### 步骤五 修改 go-oceanbase 项目中的数据库连接信息
 
 根据 **步骤一：获取 OceanBase 数据库连接串** 中的信息修改 `test.go` 文件中的数据库连接信息。
 
@@ -389,7 +396,7 @@ obclient  -h{host} -u{username} -p****** -P{port} -D{schema_name}
 conn := "root@mysql:******@tcp(10.10.10.1:2881)/test"
 ```
 
-### 步骤五：运行 `go-oceanbase` 项目
+### 步骤六：运行 `go-oceanbase` 项目
 
 代码编辑完成后，在项目目录下打开命令行终端，通过 `go run` 直接运行 Go 文件运行如下命令运行：
 
