--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/300.displays-session-statistics.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/300.displays-session-statistics.md
@@ -19,7 +19,7 @@
 2. 查看 ODP 指定 Client Session 的内部统计项。
 
     ```sql
-    SHOW PROXYSESSION STAT id [like 'xx'];
+    SHOW PROXYSESSION STAT id [LIKE 'xx'];
     ```
 
     参数说明：
@@ -243,7 +243,7 @@
     87 rows in set
     ```
 
-    obclient [(none)]> SHOW PROXYSESSION STAT 3221597019 like "%time%";
+    obclient [(none)]> SHOW PROXYSESSION STAT 3221597019 LIKE "%time%";
     +--------------------------------------+-------+
     | stat_name                            | value |
     +--------------------------------------+-------+
