420 Aone：Low error modification

--- a/zh-CN/300.develop/100.application-development-of-mysql-mode/200.sample-program-of-mysql-mode/200.python-of-mysql-mode/100.mysqlclient-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/300.develop/100.application-development-of-mysql-mode/200.sample-program-of-mysql-mode/200.python-of-mysql-mode/100.mysqlclient-connection-to-oceanbase-database-sample-program.md
@@ -28,7 +28,7 @@ python-mysqlclient
 └── requirements.txt
 ```
 
-文件说明：
+**文件说明：**
 
 * `config.py`：用于管理数据库连接配置信息。
 * `db.py`：用于操作数据库，包括创建表、插入数据、查询数据等。
@@ -59,7 +59,7 @@ OCEANBASE_CONFIG = {
 }
 ```
 
-参数解释：
+**参数解释：**
 
 * `host`：提供 OceanBase 数据库连接 IP。直连通常是一个 OBServer 节点的 IP 地址；通过 ODP 连接的方式通常是一个 ODP 地址。
 * `port`：提供 OceanBase 数据库连接端口。默认是 `2881`；使用 ODP 的时，默认端口是 `2883`。
