--- a/zh-CN/300.develop/100.application-development-of-mysql-mode/200.sample-program-of-mysql-mode/200.python-of-mysql-mode/200.pymysql-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/300.develop/100.application-development-of-mysql-mode/200.sample-program-of-mysql-mode/200.python-of-mysql-mode/200.pymysql-connection-to-oceanbase-database-sample-program.md
@@ -28,7 +28,7 @@ python-pymysql
 └── requirements.txt
 ```
 
-文件说明：
+**文件说明：**
 
 * `config.py`：用于存储数据库连接信息和 SQL 语句。
 * `insert_data.py`：用于向数据库中插入数据的模块。
@@ -63,7 +63,7 @@ python-pymysql
     }
     ```
 
-    参数解释：
+    **参数解释：**
 
     * `host`：提供 OceanBase 数据库连接 IP。直连通常是一个 OBServer 节点的 IP 地址；通过 ODP 连接的方式通常是一个 ODP 地址。
     * `port`：提供 OceanBase 数据库连接端口。默认是 `2881`；使用 ODP 的时，默认端口是 `2883`。
