--- a/zh-CN/300.develop/200.application-development-of-oracle-mode/500.read-data-of-oracle-mode/100.single-table-query-of-oracle-mode.md
+++ b/zh-CN/300.develop/200.application-development-of-oracle-mode/500.read-data-of-oracle-mode/100.single-table-query-of-oracle-mode.md
@@ -12,13 +12,13 @@ SELECT [ALL | DISTINCT] select_list FROM table_name
               [ GROUP BY group_by_expression ]
               [ HAVING group_condition ]
               [ ORDER BY column_list ][ASC | DESC]
-              [ LIMIT limit_clause ]
+              [ Row_Limiting_Clause ]
 
 column_list：
  column_name[,column_name...] 
 ```
 
-当 `WHERE`、`GROUP BY`、`HAVING`、`ORDER BY`、`LIMIT` 这些关键字一起使用时，先后顺序有明确的限制。关键字执行顺序如下：
+当 `WHERE`、`GROUP BY`、`HAVING`、`ORDER BY` 这些关键字一起使用时，先后顺序有明确的限制。关键字执行顺序如下：
 
 1. 执行 `FROM` 找到表。
 
