--- a/zh-CN/100.learn-more-about-oceanbase/700.constraints-on-product-specifications.md
+++ b/zh-CN/100.learn-more-about-oceanbase/700.constraints-on-product-specifications.md
@@ -53,7 +53,7 @@ tab Oracle 模式
 | 列数    | 4096 列    |
 | 索引个数  | 128 个     |
 | 索引总列数 | 512 列     |
-| 索引长度  | 1.5M 字节   |
+| 索引长度  | 16K   |
 | 主键总列数 | 64 列      |
 | 主键长度  | 16K       |
 | 分区个数  | <ul><li>Oracle 模式：65536 个</li> <li>MySQL 模式：8192 个</li></ul>    |
@@ -62,7 +62,7 @@ tab Oracle 模式
 
 |   类型    |   最大限制    |
 |---------|-----------|
-| 索引单个列长度 | 262143 字节 |
+| 索引单个列长度 | 16K |
 
 ## 字符串类型限制
 
