--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/3100.delete-database-link-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/3100.delete-database-link-of-mysql-mode.md
@@ -4,9 +4,14 @@
 
 该语句用于删除已创建的数据库链接（即 `dblink`）。
 
+<main id="notice" >
+   <h4>功能适用性</h4>
+   <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持 <code>dblink</code> 功能。</p>
+</main>
+
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p> 要删除已创建的数据库链接，您必须具有 <code>DROP DATABASE LINK` 系统权限</code>。 </p>
+  <p> 要删除已创建的数据库链接，您必须具有 <code>DROP DATABASE LINK</code> 系统权限。 </p>
 </main>
 
 ## 语法 
