--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/8100.select-of-mysql-mode/100.select-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/8100.select-of-mysql-mode/100.select-of-mysql-mode.md
@@ -112,7 +112,7 @@ opt_for_update_wait:
 | \[LIMIT {\[offset,\] row_count \|row_count OFFSET offset}\]                                 | 强制 `SELECT` 语句返回指定的记录数。 `LIMIT` 接受一个或两个数字参数。参数必须是一个整数常量。 <ul><li> 如果给定两个参数，第一个参数指定第一个返回记录行的偏移量，第二个参数指定返回记录行的最大数目。 初始记录行的偏移量是 0。   </li>   <li>  如果只给定一个参数，它表示返回记录行的最大数目，偏移量为 0。 </li></ul>    |
 | FOR UPDATE                                                                                  | 对查询结果所有行上排他锁，以阻止其他事务的并发修改，或阻止在某些事务隔离级别时的并发读取。 <ul><li> `WAIT`：表示等待其他事务释放资源的时间，如果超过该时间，则返回无法获得资源，单位为秒。   </li>   <li>  `NOWAIT` \| `NO_WAIT`：表示不等待其他事务释放资源，直接返回无法获得资源。  </li></ul>   |
 | PARTITION(partition_list)                                                                   | 指定查询表的分区信息。例如 `partition(p0,p1...)`。     |
-| dblink_name | 使用 dblink 查询远端数据库表的数据。|
+| dblink_name | 使用 dblink 查询远端数据库表的数据。<main id="notice" ><h4>说明</h4><p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持 <code>dblink</code> 功能。</p></main>|
 | LOCK IN SHARE MODE | 锁定查询结果。|
 
 ## 示例
