修改 100.Before-you-start.md

--- a/zh-CN/200.quick-start/100.Getting-started-with-OceanBase-SQL/100.Before-you-start.md
+++ b/zh-CN/200.quick-start/100.Getting-started-with-OceanBase-SQL/100.Before-you-start.md
@@ -6,9 +6,9 @@
 
 下面介绍两处最常见的特性差异：
 
-- [在您开始前](#在您开始前)
-  - [关于内存](#关于内存)
-  - [关于超时时间](#关于超时时间)
+* [关于内存](#关于内存)
+
+* [关于超时时间](#关于超时时间)
 
 ## 关于内存
 
