修改 100.Before-you-start.md

--- a/zh-CN/200.quick-start/100.Getting-started-with-OceanBase-SQL/100.Before-you-start.md
+++ b/zh-CN/200.quick-start/100.Getting-started-with-OceanBase-SQL/100.Before-you-start.md
@@ -29,7 +29,7 @@ OceanBase 使用基于 LSM-Tree 的存储引擎，不同于传统数据库实时
    如果要设置一个租户内存写入达到 80% 开始限速，并保证剩余内存足够提供 1 h 的写入，在租户的管理员账号中做如下设置：
 
    ```sql
-   obclient -h127.0.0.1 -P2881 -uroot@test  -Doceanbase -p
+   obclient -h127.0.0.1 -P2881 -uroot@test  -Doceanbase -p******
 
    ALTER SYSTEM SET writing_throttling_trigger_percentage = 80; 
    ALTER SYSTEM SET writing_throttling_maximum_duration = '1h';
