--- a/zh-CN/700.reference/500.system-reference/700.error-code-of-oracle-mode/500.ora-02000-to-ora-04999-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.system-reference/700.error-code-of-oracle-mode/500.ora-02000-to-ora-04999-of-oracle-mode.md
@@ -68,16 +68,15 @@ ORA-02024：database link not found
 
 * 解决方式：更正数据库链接名称。
 
-ORA-02049：timeout: distributed transaction waiting for lock
---------------------------------------------------------------------------------
+## ORA-02049：timeout: distributed transaction waiting for lock
 
 * OceanBase 错误码：6004
 
 * SQLSTATE：HY000
 
-* 错误原因：在等待锁或 `begin transaction` 哈希碰撞结束的过程中，超出了 `distributed_lock_timeout` 初始化参数指定的秒数。
+* 错误原因：当前语句需要读取一行数据时，如果该行数据被另一个事务修改，并且这个事务正在提交，那么该事务需要等待另一个事务提交完成后决定是否读取该行数据，读语句等待时间超时则报超时错误。
 
-* 解决方式：将此超时视为死锁。回滚事务并重试。
+* 解决方式：使用 `[G]V$OB_TRANSACTION_PARTICIPANTS` 视图查询当前正在提交的事务，根据事务的 ID 在对应机器上查看日志，进一步分析事务卡在提交阶段未能完成的原因。
 
 ORA-02051：another session or branch in same transaction failed or finalized
 ------------------------------------------------------------------------------------------------
