--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/6700.enable_rebalance.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/6700.enable_rebalance.md
@@ -33,8 +33,8 @@
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <ul>
-  <li>如果您想要实现租户间的负载均衡，需要将系统租户下的 <code>enable_rebalace</code> 配置项设置为 True。关闭该配置项可以确保不进行租户间的均衡操作。</li>
-  <li> 如果您希望对租户进行扩缩容操作或使用租户分区的自动均衡能力，则需要在租户下打开 <code>enable_rebalace</code> 配置项，以实现自动负载均衡和分区迁移。相反，关闭该配置项将停止租户内的自动均衡操作。</li>
+  <li>如果您想要实现租户间的负载均衡，需要将系统租户下的 <code>enable_rebalance</code> 配置项设置为 True。关闭该配置项可以确保不进行租户间的均衡操作。</li>
+  <li> 如果您希望对租户进行扩缩容操作或使用租户分区的自动均衡能力，则需要在租户下打开 <code>enable_rebalance</code> 配置项，以实现自动负载均衡和分区迁移。相反，关闭该配置项将停止租户内的自动均衡操作。</li>
   </ul>
 </main>
 
@@ -43,18 +43,18 @@
 * 租户间均衡与租户内均衡都关闭。
 
     ```sql
-    alter system set enable_rebalace = false tenant = ALL;
+    alter system set enable_rebalance = false tenant = ALL;
     ```
 
 * 只开启租户间均衡。
 
     ```sql
-    alter system set enable_rebalace = true tenant='SYS';
+    alter system set enable_rebalance = true tenant='SYS';
     ```
 
 * 关闭租户间均衡，可以进行租户内均衡。
 
     ```sql
-    alter system set enable_rebalace = false tenant='SYS';
-    alter system set enable_rebalace = true tenant='MYSQL';
+    alter system set enable_rebalance = false tenant='SYS';
+    alter system set enable_rebalance = true tenant='MYSQL';
     ```
